# OptimizedPassageEmbeddings

./: .gitignore  .pre-commit-config.yaml  BUILD Cosine Similarty Software.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MILESTONES.md  OUTPUT_MANAGEMENT.md  OptimizedPassageEmbeddings_Version_Analysis.md  PROJECT_STRUCTURE.md  Passage Embedding and Cosine Analysis.md  README.md  ROADMAP.md  SETUP.md  cleanup_test_outputs.py  config.yaml  heygen_queries.txt  pyproject.toml  quick_analysis.py  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
examples/PeacockExamples/: Compare.py  HTML_extraction.py  HTML_extractor_multiple_URLs.py  PeacockHTML_extraction.py  RecommendationsEngine-GSCOptional.py  reformat_for_scriptPeacock.py  script.py  scriptCity.py
examples/TestCases/: HeyGen.txt  ai-video-generator_broad-match_us_2025-07-15.csv  heygen_queries.txt
src/: README.md
src/passage_embed/: __init__.py  cli.py
src/passage_embed/analysis/: __init__.py  embeddings.py  extractor.py  scraper.py
src/passage_embed/core/: __init__.py  config.py  exceptions.py  logging.py
src/passage_embed/utils/: __init__.py  output_management.py  validation.py  versioning.py
src/passage_embed/visualization/: __init__.py  plotly_3d.py
tests/: test_cli.py  test_config.py  test_embeddings.py  test_visualization.py
