[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passage-embedding-analysis"
version = "0.1.0"
description = "A tool for analyzing passage embeddings and similarity"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "sentence-transformers",
    "scikit-learn",
    "plotly",
    "halo",
    "slugify",
]

[project.scripts]
passage-embed = "passage_embed.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/passage_embed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["passage_embed"] 