[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passage-embedding-analysis"
version = "0.2.0"
description = "A tool for analyzing passage embeddings and similarity"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "halo>=0.0.31",
    "python-slugify>=8.0.0",
    "ruff>=0.1.0",
    "PyYAML",
    "openTSNE>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "pytest>=7.4.0",
    "responses>=0.24.0",
]

[project.scripts]
passage-embed = "passage_embed.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/passage_embed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["passage_embed"] 